2006-08-14  Scott Lembcke <slembcke@cvs.gnome.org>

        * ChangeLog: Fixed my email address.
        
        * ext/: Merged ids.c and structures.c into definitions.c. Removed
          rbgimpcolorcmyk.c and rbgimpcolorhsv.c. 
        
        * ext/Makefile.am: Changes to reflect changes in ext/. Disabled
          rbgimpcolorspace.c.
          
        * ext/conversion.c: Removed conversions for the Gimp::HSV and
          Gimp::CMYK classes.
          
        * ext/rbgimp.*: Minor formating changes. Removed init functions for
          removed/disabled modules.
          
        * ext/rbgimpconstants.c: Moved the line that defines the 
          Gimp::EnumNames module outside the loop. Removed the check for the
          "GIMP_" prefix. Added directory constants.
          
        * ext/rbgimpdialog.c: Removed the nothing() function. In
          handle_string_types() removed the 'data' variable and replaced it
          with NULL. Removed gettext() calls as it can now be called
          dynamically from Ruby.
          
        * Changed the way that rb_gimp_main() is used so that plugins that
          don't use an init or quit callback don't define empty callbacks.
          
        * ext/rub-fu-console.c: Added a gettext() call for the window name.
          Added some commenting and rearranged some code for readability. 
        
        * gimp-lib/rubyfu.rb: Menu items are now registered using
          RubyFu.menu_register(). Added some constants for common RubyFu
          menupaths. Minor readability changes.
          
        * Added plug-ins/rubyfu_menu.rb to define the Ruby-Fu menu subpaths.
        
        * Removed plug-ins/coolmetal-logo.rb. It's outlived it's usefulness
          for testing.
          
        * plug-ins/Makefile.am: Changes to reflect changes in plug-ins/
        
        * plug-ins/*.rb: Got all non-test plugins gettext ready. Changed all
          to use the new menu registering scheme.
          