@@ -18,23 +18,23 @@
 # Foundation, Inc., 51 Franklin Street, Fifth Floor,Boston, MA
 # 02110-1301, USA.
 
-require 'rubyfu'
+require "rubyfu"
 
 include Gimp
 include RubyFu
 
 register(
-  'ruby-fu-gloom', #procedure name
-  _('Gives an image a darkened and softened cartoon look'), #blurb
-  _('Takes a radius and intensity for the effect'), #help
-  'Scott Lembcke', #author
-  'Scott Lembcke', #copyright
-  '2006', #date
-  _('Gloom'), #menupath
-  '*', #image types
+  "ruby-fu-gloom", #procedure name
+  _("Gives an image a darkened and softened cartoon look"), #blurb
+  _("Takes a radius and intensity for the effect"), #help
+  "Scott Lembcke", #author
+  "Scott Lembcke", #copyright
+  "2006", #date
+  _("Gloom"), #menupath
+  "*", #image types
   [
-    ParamDef.SLIDER('radius', _('Radius'), 5.0, 0..50, 0.1),
-    ParamDef.SLIDER('amount', _('Amount'), 100, 0..100, 1),
+    ParamDef.SLIDER("radius", _("Radius"), 5.0, 0..50, 0.1),
+    ParamDef.SLIDER("amount", _("Amount"), 100, 0..100, 1),
   ], #params
   [] #results
 ) do|run_mode, image, drawable, radius, amount|
@@ -43,7 +43,7 @@ register(
   image.undo_group do
     gloom = Layer.new_from_drawable(drawable, image)
     image.add_layer(gloom, nil)
-    gimp_drawable_set_name(gloom, _('gloom'))
+    gimp_drawable_set_name(gloom, _("gloom"))
     gloom.set_mode(DARKEN_ONLY_MODE)
     
     plug_in_gauss_iir2(image, gloom, radius, radius)
@@ -52,4 +52,4 @@ register(
   Display.flush
 end
 
-menu_register('ruby-fu-gloom', '<Image>/Ruby-Fu/')
+menu_register("ruby-fu-gloom", "<Image>/Ruby-Fu/")
