@@ -18,33 +18,33 @@
 # Foundation, Inc., 51 Franklin Street, Fifth Floor,Boston, MA
 # 02110-1301, USA.
 
-require 'rubyfu'
+require "rubyfu"
 
 include Gimp
 include RubyFu
 
 register(
-  'ruby-fu-sunset', #procedure name
-  _('Creates a nice sunset over water'), #blurb
-  _('Creates a new image of the given size of a sunset.'), #help
-  'Scott Lembcke', #author
-  'Scott Lembcke', #copyright
-  '2006', #date
-  _('Sunset'), #menupath
+  "ruby-fu-sunset", #procedure name
+  _("Creates a nice sunset over water"), #blurb
+  _("Creates a new image of the given size of a sunset."), #help
+  "Scott Lembcke", #author
+  "Scott Lembcke", #copyright
+  "2006", #date
+  _("Sunset"), #menupath
   nil, #image types
   [
-    ParamDef.INT32('width', _('Width'), 640),
-    ParamDef.INT32('height', _('Height'), 480),
+    ParamDef.INT32("width", _("Width"), 640),
+    ParamDef.INT32("height", _("Height"), 480),
   ], #params
   [
-    ParamDef.IMAGE('image', _('Image')),
+    ParamDef.IMAGE("image", _("Image")),
   ] #results
 ) do|run_mode, w, h|
   include PDB::Access
 
   image = Image.new(w, h, RGB)
   
-  sunset = Layer.new(image, w, h, RGB_IMAGE, _('sunset'), 100, NORMAL_MODE)
+  sunset = Layer.new(image, w, h, RGB_IMAGE, _("sunset"), 100, NORMAL_MODE)
   image.add_layer(sunset, nil)
 
   #Normally you would use Context.push to save this information,
@@ -55,7 +55,7 @@ register(
   
   Context.set_foreground(Color(0.025, 0.000, 0.219))
   Context.set_background(Color(1.000, 0.870, 0.000))
-  Context.set_gradient('FG to BG (HSV counter-clockwise)')
+  Context.set_gradient("FG to BG (HSV counter-clockwise)")
 
   gimp_rect_select(image, 0, 0, w, h/3, CHANNEL_OP_REPLACE, false, 0.0)
   Edit.blend(sunset, CUSTOM_MODE, NORMAL_MODE, GRADIENT_LINEAR, 100, 0, REPEAT_NONE, FALSE, FALSE, 1, 0, TRUE, 0, 0, 0, h/3)
@@ -63,7 +63,7 @@ register(
   Edit.blend(sunset, CUSTOM_MODE, NORMAL_MODE, GRADIENT_LINEAR, 100, 0, REPEAT_NONE, FALSE, FALSE, 1, 0, TRUE, 0, h, 0, h/3)
   Selection.none(image)
 
-  waves = Layer.new(image, w, h, RGB_IMAGE, 'waves', 100, NORMAL_MODE)
+  waves = Layer.new(image, w, h, RGB_IMAGE, "waves", 100, NORMAL_MODE)
   image.add_layer(waves, nil)
   plug_in_solid_noise(image, waves, false, false, rand(10_000), 15, 1.5, 16)    
   
@@ -87,5 +87,5 @@ register(
   [image]
 end
 
-menu_register('ruby-fu-sunset', ExamplesMenu)
+menu_register("ruby-fu-sunset", ExamplesMenu)
 
